--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5050
-MONGO_URI="mongodb://localhost:27017/book-list"
+MONGO_URI="mongodb+srv://admin:admin@book-list.kjlsjtu.mongodb.net/?retryWrites=true&w=majority"
 SECRET_KEY='asdfdghgaxcvtyhbv'
